style.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    line-height: 1.5;
}

body {
    margin: 0 0 0 0;
    font-family: "Montserrat", sans-serif;
    background-color: #000000;
}

img#logo {
    padding-top: 1%;
    padding-bottom: 1%;
    width: 64px;
    min-width: 64px; 
} 

header {
    display: flex;              /* make header a flex container */
    align-items: center;        /* vertically center children */
    padding-left: 2em;          /* keep your logo spacing */
    background-color: rgb(0, 0, 0);
    position: sticky ;
    top: 0;
    z-index: 1000;
}


div.navbuttons {
    padding: min(2em, 2%) ;

    display: relative;              /* flex container for buttons */
}


button.navbuttons {
    font-family: "Lexend", sans-serif;
    font-weight: 600;              /* bold enough to stand out */
    font-size: x-large;
    background-color: transparent; /* clean look */
    border: none;
    color: white;
    padding: 0.5em 1em;
    cursor: pointer;               /* shows pointer on hover */
    transition: color 0.3s, background-color 0.3s; /* smooth effect */
}

button.navbuttons:hover {
    color: #ff0000;                /* text turns red on hover */
    background-color: rgba(255, 255, 255, 0.1); /* subtle highlight */
}

button.navbuttons:active {
    color: #ff0000;
    background-color: rgba(255, 255, 255, 0.2); /* slightly stronger when clicked */
}

button.navbuttons:focus {
    outline: none;                 /* removes default outline */
    /* border-bottom: 2px solid #ff0000; */ /* adds a focus indicator */
}

button.socialmedia {
    margin-top: 0px;
    margin-bottom: 0px;
    background-color: transparent;
    border: none;
    height: 300%;
    width: 100%;
    cursor: pointer;               /* shows pointer on hover */
    transition: color 0.3s, background-color 0.3s; /* smooth effect */
}

button.socialmedia#twitter {
    width: 50px;
    background-image: url("./img/x.png");
    background-repeat: no-repeat;
    background-size: 100%;
    background-position: center;
    background-color: none;
}

button.socialmedia#facebook {
    width: 50px;
    background-image: url("./img/fb.png");
    background-repeat: no-repeat;
    background-size: 100%;
    background-position: center;
}

button.socialmedia#instagram {
    width: 50px;
    background-image: url("./img/insta.png");
    background-repeat: no-repeat;
    background-size: 100%;
    background-position: center;
}

div#title-about-this{
    margin: 0 auto 0 auto;
    width: 100%;
}

h1#fistful-of-memes {
    font-size: clamp(0.5rem, calc(6vw + 1rem),3.5rem);
    font-weight: 900;
    color: rgb(255, 255, 255);
    text-align: left;
    margin: 0 auto 0 auto;
    padding-bottom: 0.5em;
    padding-left: min(1em, 8%);
    padding-right: min(1em, 8%);
}

h1#footer {
    background-color: #000000;
    font-size: 200%;
    font-weight: 500;
    margin: 0 auto 0 auto;
    color: white;
    text-align: center;
    padding-top: 1em;
    padding-bottom: 1em;
}

div#mother-div-for-3dcontainer {
    border: none;
    margin-left: auto;
    margin-right: auto;
    width: 50dvw;
    height: 100dvh;
    background-color: rosybrown;
}

div#container3D {
    width: 50dvw;
    height: 100dvh;
    position: relative;
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: #b8bdb5;
    flex: 1 100px;
}

div#information-about-this {
    width: 100%;
    height: 100%;
    margin: 0 auto 0 auto;
    background-color: #000000;
}

p#fist-description {
    font-size: clamp(1rem, calc(1vw + 0.5rem),4rem);
    font-family: Lexend, sans-serif;
    color: white;
    text-align: left;
    padding-left: min(2em, 8%);
    padding-right: min(2em, 8%);
}

div#mother-3d-cont-text {
    height: auto;
    display: flex;
    flex-wrap: wrap;
}


div.socialmediabuttons {
    display: flex;
    gap: 2em;
    justify-content: center;
    margin-right: auto;
    margin-left: auto;
}

div#footerdiv {
    padding-top: 1rem;
    background-color: #000000;
    height: 10rem;
    margin-left: auto;
    margin-right: auto;
}

div#footertext {
    font-size: larger;
    font-family: Lexend, sans-serif;
    color: white;
    margin: 0 auto 0 auto;
    text-align: center;
}

div.footer_name {
    background-color: #000000;
    color: white;
    height: 100%;
    width: 100%;
    text-align: center;
}

/* diff pages */

div#mother-welcome {
margin: 0 0 0 0;
}

video#listen {
    position: fixed;
    max-width: 100vw;
    aspect-ratio: 9/16;
    height: 100%;
    z-index: -1;
    object-fit: cover;
}

@media (min-aspect-ratio: 16/9) {
    #listen {
        width: 100%;
        height: auto;
    }
}

@media (max-aspect-ratio: 16/9) {
    #listen {
        width: 100%;
        height: auto;
    }
}

@media (max-width: 540px) {
    /* remove this to enable data saving
    #listen {
        display: none;
    }
    body#landing {
        position: relative;
        background: url('./img/thumb_listen.png');
        background-size: 400%;
        background-repeat: no-repeat;
        width: 100%;
        background-position: 60% 0%;
        position: sticky;
    } */

    button.navbuttons {
    font-family: "Lexend", sans-serif;
    font-weight: 600;              /* bold enough to stand out */
    font-size: clamp(0.75rem, 4vw, 5rem);
    background-color: transparent; /* clean look */
    border: none;
    color: white;
    padding: 0.5em 1em;
    cursor: pointer;               /* shows pointer on hover */
    transition: color 0.3s, background-color 0.3s; /* smooth effect */
}
}

/* Basic Nested Divs | Landing Page */

div#mother-1 {
    margin: 0 0 0 0;
}

div#video-container {
    width: 100%;
    height: 100vh;
    background-color: #0000009a;
}

h1#listen-header {
    margin-left: 1rem;
    font-size: clamp(2rem,calc(4vw + 2rem),6rem);
    position: absolute;
    top: 25%;
    color: white;
    text-align: center;
}

p#listen-p{
    margin-left: 1rem;
    margin-right: 1rem;
    color: white;
    font-size: clamp(0.7rem,(2vw + 0.75rem),2rem);
    position: absolute;
    top: 50%;
    object-fit: contain;
}

/* About */

div#mother-2-3 {
    width: 100vw;
    height: auto;
    display: flex;
    flex-wrap: wrap;
}

div#mother-2 {
    margin: 0 0 0 0;
    width: 100vw;
    height: auto;
    display: flex;
    flex-wrap: wrap;
}

div#child-left-2 {
    flex: 1 100px;
    height: auto;
    width: 100%;
}

h1#child-left-2-header{
    color: white;
    font-size: clamp(0.5rem, calc(6vw + 1rem),3.5rem);
    font-weight: 900;
    padding-left: min(1em, 3%);
    padding-right: min(1em, 5%);
}

p#child-left-2-text {
    font-size: clamp(1rem, calc(1vw + 0.5rem),4rem);
    font-family: Lexend, sans-serif;
    color: white;
    text-align: left;
    padding-left: min(1em, 8%);
    padding-right: min(1em, 8%);
}

div#child-right-2 {
    flex: 1 100px;
    height: auto;
    width: 100%;
}

h1#child-right-2-header{
    color: white;
    font-size: clamp(0.5rem, calc(6vw + 1rem),3.5rem);
    font-weight: 900;
    padding-left: min(1em, 3%);
    padding-right: min(1em, 5%);
}

p#child-right-2-text {
    font-size: clamp(1rem, calc(1vw + 0.5rem),4rem);
    font-family: Lexend, sans-serif;
    color: white;
    text-align: left;
    padding-left: min(1em, 8%);
    padding-right: min(1em, 8%);
}

a.about{
    color: rgb(85, 255, 80);
    text-decoration: none;
    font-style: italic;
}

a.about:visited {
    color: rgb(85, 255, 80);
}

div#mother-3 {
    margin-left: auto;
    margin-right: auto;
    width: 100vw;
    height: auto;
    
}

h1#mother-3-header {
    font-size: clamp(0.5rem, calc(6vw + 1rem),7rem);
    font-weight: 900;
    color: white;
    padding-top: 1rem;
    text-align: center;
    padding-bottom: 1rem;
}


div#inner-child-left-pic {
    border-radius: 25%;
    background-image: url(./img/juls.jpg);
    background-position: center;
    background-size: 175%;
    height: 15em;
    width: 15em;
    margin-top: 7%;
    margin-left: auto;
    margin-right: auto;
} 

div#inner-child-left-header, #inner-child-middle-header, #inner-child-right-header {
    font-size: 150%;
    padding-top: 1%;
    padding-left: 3%;
    padding-right: 3%;
    font-family: Lexend, sans-serif;
    color: white;
    text-align: center;
}


div#inner-child-middle-pic {
    background-image: url(./img/felix.jpg);
    background-position: center;
    background-size: 100%;
    border-radius: 25%;
    height: 15em;
    width: 15em;
    margin-top: 7%;
    margin-left: auto;
    margin-right: auto;
} 

div#child-left-3 {
    flex: 1 100px;
    height: 38vh;
}

div#child-middle-3 {
    flex: 1 100px;
    height: 38vh;
}

div#child-right-3 {
    flex: 1 100px;
    height: 38vh;
}

div#inner-child-right-pic {
    background-image: url(./img/shane.png);
    background-position: center;
    background-size: 100%;
    border-radius: 25%;
    height: 15em;
    width: 15em;
    margin-top: 7%;
    margin-left: auto;
    margin-right: auto;
} 

/* Location */

div#our-location {
    background-color: #000000;
    height: auto;
    width: 100%;
    margin: 0 auto 0 auto;
    text-align: center;
    font-family: Lexend, sans-serif;
    color: white;
    font-size: clamp(0.5rem, calc(6vw + 1rem),3.5rem);
    font-weight: 900;
}

div#mother-4 {
    margin: 0 0 0 0;
}
div#child-left-4 {
    background-color: #ff0000;
    background-image: url(./img/nexus_gallery.jpg);
    background-position: 90% center;
    background-repeat: no-repeat;
    background-size: cover;
    height: auto;
    width: 100%;
    flex: 2 212px;
}

div#child-right-4 {
    height: auto;
    width: 100%;
    flex: 2 212px;
    padding-left: min(1em, 8%);
    padding-right: min(1em, 8%);
}

h1#phase1 {
    font-size: clamp(0.5rem, calc(6vw + 1rem),5rem);
    font-weight: 900;
    color: rgb(255, 255, 255);
    text-align: left;
}

p#phase1-text {
    font-size: clamp(1rem, calc(1vw + 0.5rem),4rem);
    font-family: Lexend, sans-serif;
    color: white;
}

div#child-left-5 {
    height: auto;
    width: 100%;
    flex: 3 212px;
    padding-left: min(1em, 8%);
    padding-right: min(1em, 8%);
}

div#child-right-5 {
    background: yellow;
    background-image: url(./img/image_website.png);
    background-position: cover;
    background-repeat: no-repeat;
    background-size: cover;
    height: auto;
    width: 100%;
    flex: 2 212px;
}

h1#phase2 {
    font-size: clamp(0.5rem, calc(6vw + 1rem),5rem);
    font-weight: 900;
    color: rgb(255, 255, 255);
    text-align: left;
}

p#phase2-text {
    font-size: clamp(1rem, calc(1vw + 0.5rem),4rem);
    font-family: Lexend, sans-serif;
    color: white;
    text-align: left;
}

div#inner-mother-4a {
    height: 100vh;
    width: 100%;
    display: flex;
    flex-wrap:wrap;
}

div#inner-mother-4b {
    height: 100vh;
    width: 100%;
    display: flex;
    flex-wrap:wrap;
}

div#cont-3d-text{
    flex: 1 100px;
}

